fixed like button spacing

--- a/stitch_hub/public/css/style.css
+++ b/stitch_hub/public/css/style.css
@@ -145,7 +145,7 @@ button {
   right:0;
   bottom:0;
   margin-bottom: 5px;
-  margin-right:45px;
+  margin-right:40px;
 }
 
 .like-box{
